compiler/fir/analysis-tests/testData/resolve/references/referenceToField.kt
class A {
    val x: Int = 1
        get() {
            ::<!UNSUPPORTED!>field<!>
            return field
        }
}
